# hello-cmake

./: CMakeLists.txt
step_01/: CMakeLists.txt
step_03/: CMakeLists.txt
step_03/src/: main.c
step_04/: CMakeLists.txt
step_04/include/: tick.h
step_04/src/: time_any.c
step_05/: CMakeLists.txt  main.c
